# zip

./: .gitignore  Cargo.toml  README.md  RELEASE.md  test.md
src/: error.rs  lib.rs  log.rs  main.rs
src/compress/: mod.rs  strategy.rs  worker.rs
src/utils/: file_type.rs  mod.rs  progress.rs  verify.rs
